--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div>
       <h1>Nikolai Leday CSC 2463</h2>
 
-        <a href ="http://www.nleday1212.github.io/CSC2463/Assignment 1/Part 1/Part1.html">Assignment 1 Part1</a><br>
-	<a href ="http://www.nleday1212.github.io/CSC2463/Assignment 1/Part 2/Part2.html">Assignment 1 Part2</a><br>
-	<a href ="http://www.nleday1212.github.io/CSC2463/Assignment 1/Part 3/Part3.html">Assignment 1 Part3</a><br>
-	<a href ="http://www.nleday1212.github.io/CSC2463/Assignment 1/Part 4/Part4.html">Assignment 1 Part4</a><br>
+        <a href ="https://nleday1212.github.io/CSC2463/Assignment 1/Part 1/Part1.html">Assignment 1 Part1</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment 1/Part 2/Part2.html">Assignment 1 Part2</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment 1/Part 3/Part3.html">Assignment 1 Part3</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment 1/Part 4/Part4.html">Assignment 1 Part4</a><br>
 
 
       
