--- a/Assignment1/Part2/Part2.html
+++ b/Assignment1/Part2/Part2.html
@@ -7,6 +7,7 @@
   <title>Assignment 1 Part 2</title>
   <style>
     body {
+      background-color: #cccccc;
       padding: 0;
       margin: 0;
     }
