--- a/index/index.html
+++ b/index/index.html
@@ -10,11 +10,11 @@
   <body>
     <div>
       <h1>Nikolai Leday CSC 2463</h2>
-
-        <a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part1/Part1.html">Assignment 1 Part1</a><br>
-	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part2/Part2.html">Assignment 1 Part2</a><br>
-	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part3/Part3.html">Assignment 1 Part3</a><br>
-	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part4/Part4.html">Assignment 1 Part4</a><br><br>
+	<a href ="https://github.com/NLeday1212/CSC2463">GitHub link</a><br><br>
+        <a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part1/Part1.html">Assignment 1 Part 1</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part2/Part2.html">Assignment 1 Part 2</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part3/Part3.html">Assignment 1 Part 3</a><br>
+	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part4/Part4.html">Assignment 1 Part 4</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment2/Assignment2.html">Assignment 2</a><br>
 
       
