--- a/Assignment4/Assignment4.html
+++ b/Assignment4/Assignment4.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment 3</title>
+  <title>Assignment 4</title>
   <style>
     body {
       padding: 0;
       margin: 0;
     }
     body {
-      background-color: grey;
+      background-color: rgb(204, 198, 198);
     }
   </style>
   <script src="https://nleday1212.github.io/CSC2463/p5.js"></script>
@@ -20,11 +20,6 @@
 
 <body>
   <main>
-    <img src = "Bug1.png">
-    <img src = "Bug2.png">
-    <img src = "Bug3.png">
-    <img src = "Bug4.png">
-    <img src = "Bug5.png">
   </main>
 </body>
 
