--- a/index/index.html
+++ b/index/index.html
@@ -17,6 +17,7 @@
 	<a href ="https://nleday1212.github.io/CSC2463/Assignment1/Part4/Part4.html">Assignment 1 Part 4</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment2/Assignment2.html">Assignment 2</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment3/Assignment3.html">Assignment 3</a><br>
+  <a href ="https://nleday1212.github.io/CSC2463/Assignment4/Assignment4.html">Assignment 4</a><br>
 
       
     </div>
