--- a/index/index.html
+++ b/index/index.html
@@ -2,9 +2,6 @@
     <meta charset="UTF-8">
   <head>
 	<style>
-	a{
-		font-size: 40;
-	}
 	</style>	
   </head>
   <body>
@@ -18,6 +15,7 @@
   <a href ="https://nleday1212.github.io/CSC2463/Assignment2/Assignment2.html">Assignment 2</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment3/Assignment3.html">Assignment 3</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment4/Assignment4.html">Assignment 4</a><br><br>
+  <a href ="https://nleday1212.github.io/CSC2463/Assignment5/Assignment5.html">Assignment 5</a><br><br>
 
       
     </div>
