--- a/Assignment5/Assignment5.html
+++ b/Assignment5/Assignment5.html
@@ -6,14 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assignment 5</title>
   <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    body {
-      background-color: rgb(204, 198, 198);
-    }
   </style>
+  <link rel="stylesheet" href="style.css">
   <script src="https://nleday1212.github.io/CSC2463/p5.js"></script>
   <script src="https://nleday1212.github.io/CSC2463/Tone.js"></script>
   <script src="sketch.js"></script>
