--- a/index/index.html
+++ b/index/index.html
@@ -20,6 +20,8 @@
   <a href ="https://nleday1212.github.io/CSC2463/Assignment4/Assignment4.html">Assignment 4</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment5/Assignment5.html">Assignment 5</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment6/Assignment6.html">Assignment 6</a><br><br>
+  <a href ="https://nleday1212.github.io/CSC2463/Assignment7/Assignment7.html">Assignment 6</a><br><br>
+
 
       
     </div>
