--- a/index/index.html
+++ b/index/index.html
@@ -21,6 +21,8 @@
   <a href ="https://nleday1212.github.io/CSC2463/Assignment5/Assignment5.html">Assignment 5</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment6/Assignment6.html">Assignment 6</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment7/Assignment7.html">Assignment 7</a><br><br>
+  <a href ="https://nleday1212.github.io/CSC2463/Assignment7/Assignment8.html">Assignment 8</a><br><br>
+
 
 
       
