--- a/Assignment12/Assignment12.html
+++ b/Assignment12/Assignment12.html
@@ -14,17 +14,18 @@
       background-color: rgb(204, 198, 198);
     }
   </style>
-  <script src="./p5/p5.js"></script>
-  <script src="./p5/p5.dom.min.js"></script>
-  <script src="./p5/p5.sound.min.js"></script>
-  <script src="./p5/p5.serialport.js"></script>
-  <script src="./p5/PDMSerial.js"></script>
-  <script src="https://nleday1212.github.io/CSC2463/Tone.js"></script>
+  <script src="./js/p5.js"></script>
+  <script src="./js/Tone.js"></script>
+  <script src="./js/p5.dom.min.js"></script>
+  <script src="./js/p5.serialport.js"></script>
+  <script src="./js/PDMSerial.js"></script>
+  <script src="./js/sketch.js"></script>
+  
 </head>
 
 <body>
   <main>
-    <script src="./p5/sketch.js"></script>
+    
   </main>
 </body>
 
