--- a/Final_Project/Space_Spelunker.html
+++ b/Final_Project/Space_Spelunker.html
@@ -16,6 +16,9 @@
   </style>
   <script src="./js/p5.js"></script>
   <script src="./js/Tone.js"></script>
+  <script src="./js/p5.dom.min.js"></script>
+  <script src="./js/p5.serialport.js"></script>
+  <script src="./js/PDMSerial.js"></script>
   <script src="./js/sketch.js"></script>
 </head>
 
