--- a/index/index.html
+++ b/index/index.html
@@ -23,6 +23,7 @@
   <a href ="https://nleday1212.github.io/CSC2463/Assignment7/Assignment7.html">Assignment 7</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Assignment8/Assignment8.html">Assignment 8</a><br><br>
   <a href ="https://nleday1212.github.io/CSC2463/Final_Project_Keyboard/Space_Spelunker.html">Final Project | Space Spelunker | Keyboard Only</a><br><br>
+  <a href ="https://nleday1212.github.io/CSC2463/Final_Project/Space_Spelunker.html">Final Project | Space Spelunker | Arduino</a><br><br>
 
 
 
